# meetcap

./: .gitignore  README.md  pyproject.toml
assets/: hotwords.example.txt
docs/: cheatsheet.md  refinement.md
meetcap/: __init__.py  cli.py
meetcap/services/: diarization.py  refinement.py  summarization.py
meetcap/tui/css/: process.tcss
meetcap/tui/screens/: process.py
meetcap/tui/widgets/: pipeline.py
meetcap/utils/: config.py
tests/: test_diarization.py  test_refinement.py  test_summarization.py  test_tui.py
