[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetcap"
dynamic = ["version"]
description = "Offline meeting recorder & summarizer for macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Juan", email = "juanqui@villafam.com" }
]
homepage = "https://github.com/juanqui/meetcap"
repository = "https://github.com/juanqui/meetcap"
issues = "https://github.com/juanqui/meetcap/issues"
keywords = ["meeting", "recorder", "transcription", "summarization", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

dependencies = [
    "pynput>=1.8.1,<2.0",
    "rich>=14.0.0,<15.0",
    "typer>=0.16.0,<1.0",
    "tomli>=2.2.1; python_version < '3.11'",
    "toml>=0.10.2,<1.0",
    "urllib3>=2.5.0,<3.0",
    "mlx-lm>=0.30.7,<1.0",
    "mlx-vlm>=0.4.0,<1.0",
    "torchvision>=0.20.0",  # required by mlx-vlm processor for Qwen3.5
    "psutil>=6.1.0,<7.0",
    "textual>=8.0.0,<9.0",
]

[project.scripts]
meetcap = "meetcap.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0",
    "pytest-cov>=6.2.1,<7.0",
    "pytest-mock>=3.14.0,<4.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "pytest-timeout>=2.4.0,<3.0",
    "ruff>=0.12.8,<1.0",
    "mypy>=1.13.0,<2.0",
    "coverage[toml]>=7.6.9,<8.0",
    "bump-my-version>=0.30.0",
    "pytest-textual-snapshot>=1.0.0",
]
stt = [
    "faster-whisper>=1.2.0,<2.0",
]
mlx-stt = [
    "mlx-whisper>=0.4.2,<1.0",
]
vosk-stt = [
    "vosk>=0.3.44,<1.0",
    "soundfile>=0.13.1,<1.0",
    "scikit-learn>=1.3.0,<2.0",
]
diarization = [
    "sherpa-onnx>=1.10.0,<2.0",
    "librosa>=0.10.0,<1.0",
    "soundfile>=0.13.1,<1.0",
]
parakeet-stt = [
    "parakeet-mlx>=0.5.1",
]

[tool.hatch.version]
path = "meetcap/__init__.py"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1,<9.0",
    "pytest-cov>=6.2.1,<7.0",
    "pytest-mock>=3.14.0,<4.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "pytest-timeout>=2.4.0,<3.0",
    "ruff>=0.12.8,<1.0",
    "mypy>=1.13.0,<2.0",
    "coverage[toml]>=7.6.9,<8.0",
    "bump-my-version>=0.30.0",
    "pytest-textual-snapshot>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
]
ignore = ["E501"]  # line too long, handled by ruff format

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["meetcap"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=meetcap",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=73",
]

[tool.bumpversion]
current_version = "3.0.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = ""
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "meetcap/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
